# belgian-journal

./: .copy.env  .dockerignore  .gitignore  .myenv  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  acts.json  environment.yml  pyproject.toml  requirements.txt
documentation/: deployment.md  extract_text.md  extract_text_digital.ipynb  extract_text_scan.ipynb  ocr.ipynb  ocr.md  scraping.ipynb  scraping.md  summarize.ipynb  summarize.md
documentation/resources/: page.html  publication.json
html_samples/: no_address_act.html  standard_format.html
src/: extract_text.py  items.py  middlewares.py  pipelines.py  settings.py
src/spiders/: __init__.py  legal_entities.py
